--- a/.github/workflows/gha-pr-dev.yml
+++ b/.github/workflows/gha-pr-dev.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches:
       - 'feature/**'
-      - 'bugfixe/**'
+      - 'bugfix/**'
       - develop
     types:
     - opened
