--- a/.github/workflows/gha-swiftlint.yml
+++ b/.github/workflows/gha-swiftlint.yml
@@ -28,6 +28,7 @@ jobs:
       - uses: actions/checkout@v4.1.4
       - uses: norio-nomura/action-swiftlint@3.2.1
         with:
-          args: --strict --no-cache --config swiftlint.yml
+          args: --no-cache --config swiftlint.yml
+#          args: --strict --no-cache --config swiftlint.yml
       - run: echo "::notice::${{ github.actor }} ran GitHub Action for swiftLint lint --no-cache (${{ job.status }})."
  
